# chart-verifier

./: .editorconfig  .gitattributes  .gitignore  .golangci.yaml  Dockerfile  Makefile  OWNERS  README.md  go.mod  go.sum  main.go  ruff.toml
.github/: dependabot.yml
.github/workflows/: Build.yaml  DevRelease.yaml  build-image.yaml  build.yaml  check-actions.yml  codeql.yaml  cv_action.yaml  dev_release.yaml  functional-tests.yaml  golang-style.yml  gosec.yaml  main.yaml  notify-need-ok-to-test.yaml  pr-functional-tests.yaml  python-style.yml  release.yaml  sbom-on-release.yaml  scan-branch-sbom.yaml  test-action.yaml  test.yaml  vulnerability.yaml
action/: action.yml
cmd/: certify.go  certify_test.go  check.go  check_test.go  report.go  report_test.go  root.go  verify.go  verify_test.go  version.go  version_test.go
cmd/release/: release_info.json
cmd/test/: badDigestReport.yaml  report.yaml
cmd/testdata/: report-all-pass.yaml  report-invalid.yaml  (+1 more)
config/: profile-community-1.1.yaml  profile-partner-1.0.yaml  profile-partner-1.1.yaml  profile-redhat-1.0.yaml  profile-redhat-1.1.yaml
docs/: README.md  blog.md  helm-chart-annotations.md  helm-chart-api.md  helm-chart-checks.md  helm-chart-developer.md  helm-chart-release.md  helm-chart-submission.md  helm-chart-troubleshooting.md  openshift-version-in-the-report.md
hack/: build-image.ps1  build-image.sh  build.ps1  build.sh  chart-verifier-docker.sh  chart-verifier-podman.sh  chart-verifier.sh  chartverifier_test.go  get-helm.sh  get-oc.sh  test.ps1  test.sh
pkg/tool/: exec.go  (+7 more)
proposals/: P0001-openshift-chart-compatibility.md  P0002-describe-stage-refactor.md  P99999-propagate-user-defined-configuration-to-checks.md  reports-on-reports.md
scripts/: README.md  requirements.txt  setup.cfg
scripts/src/buildandtest/: buildandtest.py
scripts/src/checkautomerge/: checkautomerge.py
scripts/src/owners/: checkuser.py
scripts/src/quay/: linkimages.py
scripts/src/release/: releasebody.py  releasechecker.py  tarfile_asset.py  versionchecker.py
scripts/src/report/: report_info.py
scripts/src/saforcharttesting/: saforcharttesting.py
scripts/src/utils/: utils.py
tests/: README.md  chartverifier_test.go
(+208 files in other folders)
