[metadata]
name = rh-chart-verifier
version = 0.1.0
author = Martin Mulholland
author_email = mmulholl@redhat.com
description = Chart verifier
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/redhat-certification/chart-verifier
project_urls =
    Bug Tracker = https://github.com/redhat-certification/chart-verifier/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    PyYAML
    requests
    semver
    pytest
    pytest-bdd

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    release-checker = release.releasechecker:main
    print-release-body = release.releasebody:main
    check-user = owners.checkuser:main
    sa-for-chart-testing = saforcharttesting.saforcharttesting:main
    tar-file = release.tarfile_asset:main
